k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-indexer
  labels:
    app: token-indexer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: token-indexer
